Get product list from db
Remove unnecessary functions

--- a/app/src/main/res/layout/item_product_main.xml
+++ b/app/src/main/res/layout/item_product_main.xml
@@ -23,12 +23,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:loadImageUrl="@{productModel.productImage}" />
+            android:scaleType="fitXY"
+             />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{productModel.productMainName}"
+            android:gravity="center"
+
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />
