--- a/app/src/main/res/layout/item_product_detail.xml
+++ b/app/src/main/res/layout/item_product_detail.xml
@@ -17,7 +17,7 @@
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:padding="4dp"
+            android:layout_margin="4dp"
             android:scaleType="center"
             android:layout_width="60dp"
             android:layout_height="60dp"
