--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -26,4 +26,10 @@
             app:argType="com.main.marriage_list.model.product.ProductModel"/>
 
     </fragment>
+
+    <fragment
+        android:id="@+id/addNewItemFragment"
+        android:name="com.main.marriage_list.ui.AddNewItems"
+        android:label="AddNewItemFragment"
+        tools:layout="@layout/fragment_add_items"/>
 </navigation>
